<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:background="@drawable/shadow_relative_layout">
            <TextView
                android:layout_alignParentStart="true"
                android:id="@+id/titleText"
                android:layout_marginEnd="15sp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/jf_flat_medium"
                android:textColor="#303030"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:text="@string/beNews"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_ion"
                android:layout_centerVertical="true"
                android:id="@+id/backButton"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/bk_video">
            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/video_rel"
                android:background="@drawable/rel_bk_video_icon"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_video"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_below="@id/video_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_live_stream"
                    android:fontFamily="@font/jf_flat_medium"
                    android:textColor="#f9f9fa"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:layout_margin="5dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/orange_layout"
                    android:text="@string/start"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:textSize="12dp"
                    android:fontFamily="@font/jf_flat_medium"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_vide_or_image"
            android:fontFamily="@font/jf_flat_medium"
            android:gravity="center"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/her"
            android:fontFamily="@font/jf_flat_medium"
            android:gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="20dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:id="@+id/cvUploadPictures">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="70dp"
                    android:background="@drawable/bk_video">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_image"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image"
                    android:fontFamily="@font/jf_flat_medium"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="20dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:id="@+id/cvUploadVideo">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="70dp"
                    android:background="@drawable/bk_video">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_video"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_video"
                    android:fontFamily="@font/jf_flat_medium"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
