<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_height="match_parent"
        tools:context=".view.actvivties.HomePage">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="10dp"
                        android:id="@+id/textHome"
                        android:layout_marginEnd="15sp"
                        android:layout_marginTop="20dp"

                        android:textSize="20sp"
                        android:fontFamily="@font/jf_flat_medium"
                        android:textColor="#303030"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:text="@string/liveStream"
                        android:layout_height="wrap_content"/>

                        <ImageView
                            android:id="@+id/backButton"
                            android:padding="10dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/back_ion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:id="@+id/rel"
                        android:layout_marginTop="30dp"
                        android:layout_below="@+id/textHome"
                        android:background="@color/colorWhite"
                        android:orientation="horizontal"
                        android:weightSum="4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:id="@+id/collection"
                                android:padding="@dimen/pdlg_space_1.0x"
                                android:textSize="16sp"
                                android:fontFamily="@font/jf_flat_medium"
                                android:textAlignment="center"
                                android:textColor="@color/color_not_activ"
                                android:drawablePadding="10dp"
                                android:text="@string/collection"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_gravity="center"
                                android:gravity="center"

                                android:id="@+id/sport"
                                android:padding="@dimen/pdlg_space_1.0x"
                                android:textSize="16sp"
                                android:fontFamily="@font/jf_flat_medium"
                                android:textAlignment="center"
                                android:textColor="@color/color_not_activ"
                                android:drawablePadding="10dp"
                                android:layout_centerVertical="true"
                                android:text="@string/sport"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_gravity="center"
                                android:gravity="center"

                                android:id="@+id/news"
                                android:layout_centerInParent="true"
                                android:padding="@dimen/pdlg_space_1.0x"
                                android:textSize="16sp"
                                android:fontFamily="@font/jf_flat_medium"
                                android:textAlignment="center"
                                android:textColor="@color/color_not_activ"
                                android:drawablePadding="10dp"
                                android:text="@string/news"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_gravity="center"
                                android:gravity="center"

                                android:textColor="@color/colorAccent"
                                android:id="@+id/all"
                                android:layout_centerVertical="true"
                                android:layout_alignParentEnd="true"
                                android:padding="@dimen/pdlg_space_1.0x"
                                android:textSize="16sp"
                                android:fontFamily="@font/jf_flat_medium"
                                android:drawablePadding="10dp"
                                android:text="@string/all"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>



                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_below="@id/rel"
                        android:layout_height="match_parent"
                        android:id="@+id/rv"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </FrameLayout>
</layout>