<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@drawable/bg_login"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/logo_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="110dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                bind:cardCornerRadius="@dimen/pdlg_space_1.0x"
                android:layout_marginTop="30dp"
                android:elevation="5dp"
                android:id="@+id/form"
                bind:cardElevation="5dp"
                bind:cardMaxElevation="5dp"
                bind:cardUseCompatPadding="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_marginTop="15dp"
                        android:weightSum="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/new_acount"
                            android:padding="@dimen/pdlg_space_1.0x"
                            android:textSize="16sp"
                            android:fontFamily="@font/jf_flat_medium"
                            android:textAlignment="center"
                            android:layout_weight="0.5"
                            android:drawablePadding="10dp"
                            android:text="@string/new_accunt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/login"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:drawablePadding="10dp"

                            android:fontFamily="@font/jf_flat_medium"
                            android:textAlignment="center"
                            android:layout_weight="0.5"
                            android:text="@string/login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <ScrollView
                        android:layout_marginTop="15dp"
                        android:scrollbars="none"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginEnd="20dp"
                                android:text="@string/app_email"

                                android:fontFamily="@font/jf_flat_medium"
                                android:textSize="14sp"
                                android:textColor="#303030"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <EditText
                                android:id="@+id/email"
                                android:gravity="center"
                                android:fontFamily="@font/jf_flat_medium"
                                android:layout_marginTop="15sp"
                                android:hint="@string/app_email"
                                android:textSize="12sp"
                                android:textColorHint="#989898"
                                android:paddingEnd="10dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="20dp"
                                android:background="@drawable/edit_box"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                            <LinearLayout
                                android:id="@+id/register_form"
                                android:visibility="gone"
                                android:layout_marginTop="15sp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_marginEnd="20dp"
                                    android:text="@string/app_userName"

                                    android:fontFamily="@font/jf_flat_medium"
                                    android:textSize="14sp"
                                    android:textColor="#303030"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"/>
                                <EditText
                                    android:gravity="center"
                                    android:fontFamily="@font/jf_flat_medium"
                                    android:layout_marginTop="15sp"
                                    android:hint="@string/app_userName"
                                    android:id="@+id/username"
                                    android:textSize="12sp"
                                    android:textColorHint="#989898"
                                    android:paddingEnd="10dp"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginEnd="20dp"
                                    android:background="@drawable/edit_box"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"/>
                            </LinearLayout>
                            <TextView
                                android:layout_gravity="right|center"
                                android:gravity="right"
                                android:visibility="gone"
                                android:id="@+id/phoneNumberTitle"
                                android:layout_marginEnd="20dp"
                                android:text="@string/phone_number"

                                android:fontFamily="@font/jf_flat_medium"
                                android:textSize="14sp"
                                android:textColor="#303030"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <EditText
                                android:visibility="gone"
                                android:gravity="center"
                                android:fontFamily="@font/jf_flat_medium"
                                android:layout_marginTop="15sp"
                                android:hint="@string/phone_number"
                                android:id="@+id/phoneNumber"
                                android:textSize="12sp"
                                android:textColorHint="#989898"
                                android:paddingEnd="10dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="20dp"
                                android:background="@drawable/edit_box"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_marginEnd="20dp"
                                android:text="@string/app_pass"
                                android:layout_marginTop="15sp"
                                android:fontFamily="@font/jf_flat_medium"
                                android:textSize="14sp"
                                android:textColor="#303030"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <EditText
                                android:inputType="textPassword"
                                android:paddingEnd="10dp"
                                android:layout_marginTop="15sp"
                                android:textColorHint="#989898"
                                android:fontFamily="@font/jf_flat_medium"
                                android:textSize="12sp"
                                android:padding="5dp"
                                android:id="@+id/password"
                                android:layout_gravity="right"
                                android:gravity="center"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="20dp"
                                android:hint="@string/enter_pass"
                                android:background="@drawable/edit_box"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:id="@+id/forget_pass"
                                android:layout_marginBottom="15dp"
                                android:layout_marginEnd="20dp"
                                android:text="@string/app_forget"
                                android:layout_marginTop="20dp"
                                android:padding="5dp"
                                android:fontFamily="@font/jf_flat_medium"
                                android:textSize="12sp"
                                android:textAlignment="center"
                                android:textColor="#303030"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                            <CheckBox
                                android:layout_marginTop="20dp"
                                android:visibility="gone"
                                android:id="@+id/checkbox_accept_terms"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginBottom="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:button="@drawable/check_box_selector"
                                android:text="موافق على الشروط والأحكام"
                                android:textAlignment="center"
                                android:layoutDirection="rtl"
                                android:paddingStart="10dp"
                                android:textSize="12sp"
                                android:fontFamily="@font/jf_flat_medium"
                                android:textColor="#303030" />

                            <Button

                                android:id="@+id/login_Button"
                                android:background="@drawable/login"
                                android:text="@string/app_login"
                                android:layout_gravity="center"
                                android:textColor="@color/pdlg_color_white"
                                android:textSize="14sp"
                                android:fontFamily="@font/jf_flat_medium"
                                android:layout_marginBottom="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>

                    </ScrollView>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_below="@id/form"
                android:orientation="vertical"
                android:id="@+id/havingAccountCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/new_acount_ohter"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:fontFamily="@font/jf_flat_medium"
                    android:text="@string/no_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:visibility="gone"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/twiter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/inst"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/face"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
        <com.github.ybq.android.spinkit.SpinKitView
            android:visibility="gone"
            android:layout_centerInParent="true"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent" />
    </RelativeLayout>
</layout>